2005-09-30  Michael Natterer  <mitch@gimp.org>

	* app/actions/dialogs-actions.c (dialogs_toplevel_actions): use
	GIMP_STOCK_CHAR_PICKER for the keyboard shortcuts dialog. Not
	quite right but at least greppable when we have a proper icon.

2005-09-30  Michael Natterer  <mitch@gimp.org>

	* app/dialogs/dialog.c: removed forgotten foreign registration of
	"gimp-keyboard-shortcuts-dialog".

2005-09-30  Michael Natterer  <mitch@gimp.org>

	* plug-ins/*/*.c: removed '...' from progress messages. They are
	redundant because we are already in a progress. Ported some more
	g_strdup_printf()/gimp_progress_init() to
	gimp_progress_init_printf(). Core will follow...

2005-09-29  Manish Singh  <yosh@gimp.org>

	* plug-ins/uri/uri-backend-wget.c: Finish porting to new progress
	API (and make it build).

	* plug-ins/uri/uri-backend-gnomevfs.c: Convert a g_strdup_printf
	gimp_progress_set_text pair to gimp_progress_set_text_printf.

2005-09-30  Sven Neumann  <sven@gimp.org>

	* app/actions/dialogs-actions.c
	* app/dialogs/dialogs-constructors.[ch]
	* app/dialogs/dialogs.c
	* app/dialogs/keyboard-shortcuts-dialog.[ch]: register the keyboard
	shortcut dialog with the dialog factory as singleton toplevel dialog.

	* app/dialogs/preferences-dialog.c: changed accordingly.

	* menus/image-menu.xml.in: added a "Keyboard Shortcuts" entry to
	the Edit menu.

2005-09-30  Sven Neumann  <sven@gimp.org>

	* app/dialogs/Makefile.am
	* app/dialogs/keyboard-shortcuts-dialog.[ch]
	* app/dialogs/preferences-dialog.c
	* app/widgets/gimphelp-ids.h: moved Keyboard Shortcuts dialog into
	it's own file.

2005-09-29  Akkana Peck  <akkana@cvs.gnome.org>

	* plug-ins/common/autocrop.c:
	It was cropping too much, eliminating the first non-background
	row/column on each edge.

2005-09-29  Sven Neumann  <sven@gimp.org>

	* app/base/tile-cache.c
	* app/base/tile-manager.c
	* app/base/tile-private.h
	* app/base/tile-swap.c
	* app/base/tile.c: keep the data size of a tile in the Tile struct